Get metadata in order. [admin]

--- a/meta/description
+++ b/meta/description
@@ -1,6 +1,6 @@
-The Cliable mixin is a very quick and and easy
-way to make almost any class usable via a command
-line interface. It simply uses writer methods as
-option setters, and the first command line argument
-as the method to call, with the subsequent arguments
-passed to the method.
+Think of Executable as a *COM*, a Commandline Object Mapper,
+in much the same way that ActiveRecord is an ORM,
+an Object Relational Mapper. A class utilizing Executable
+can define a complete command line tool using nothing more
+than Ruby's own method definitions.
+
